<resources>
    <string name="app_name">Meniere</string>
    <string name="MyMeniere">My Ménière</string>
    <string name="aboutMeniere">About Ménière</string>
    <string name="utilities"> + Utilities</string>
    <string name="help">Help</string>
    <string name="authors">Authors</string>
    <string name="editUser">Edit User</string>
    <string name="login">Login</string>
    <string name="singup">Sing Up</string>
    <string name="monthlyReport">Monthly Report</string>
    <string name="newEvent">New Event</string>
    <string name="frameworks">Frameworks</string>
    <string name="healthyHabits">Healthy Habits</string>
    <string name="userGuide">User Guide</string>
    <string name="hearingDiary">Hearing Diary</string>
    <string name="manageData">Manage Data</string>
    <string name="title_activity_spalsh">SpalshActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="textSplash1">MÈNIÈRE</string>
    <string name="toast_save_hearing_test_ok">Hearing test saved</string>
    <string name="toast_save_hearing_test_ko">Error saving hearing test</string>
    <string name="dialogoGuardar">Guardar</string>
    <string name="positiveTxtOk">Ok</string>
    <string name="negativeTxtCancel">Cancel</string>
    <string name="titleNewEvent">New event</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="episodes">Episodes:</string>
    <string name="duration">Duration:</string>
    <string name="vertigoIntensity">Vertigo intensity:</string>
    <string name="limitation">Intensity limitation:</string>
    <string name="stress">Stress level:</string>
    <string name="hearingLoss">Hearing loss</string>
    <string name="tinnitus">Tinnitus</string>
    <string name="earFullness">Ear fullness</string>
    <string name="headache">Headache</string>
    <string name="photophobia">Photophobia</string>
    <string name="phonophobia">Phonophobia</string>
    <string name="visualSymptoms">Visual symptoms</string>
    <string name="tumarkin">Tumarkin</string>
    <string name="menstruation">Menstruation</string>
    <string name="nausea">Nausea</string>
    <string name="vomiting">Vomiting</string>
    <string name="instability">Instability</string>
    <string name="instabilityIntensity">Instability intensity:</string>
    <string name="headacheProperties">Headache properties</string>
    <string name="NA">N/A</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="oneSide">One side</string>
    <string name="wholeHead">Whole Head</string>
    <string name="throbbing">Throbbing</string>
    <string name="tightening">Tigthening</string>
    <string name="eventTriggers">Event triggers</string>
    <string name="weather">Weather</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="storm">Storm</string>
    <string name="sleep">Sleep</string>
    <string name="excelent">Excelent</string>
    <string name="regular">Regular</string>
    <string name="poor">Poor</string>
    <string name="physicalActivity">Physical activity</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="habitExcess">Habit - Excess</string>
    <string name="salt">Salt</string>
    <string name="caffeine">Caffeine</string>
    <string name="alcohol">Alcohol</string>
    <string name="tobacco">Tobacco</string>
    <string name="sugar">Sugar</string>
    <string name="myNotes">My notes</string>
    <string name="backSymps">Background Symptoms</string>
    <string name="dizzinessDis">Dizziness disability:</string>
    <string name="inestabilityDis">Inestability disability:</string>
    <string name="visualBlurDis">Visual blur disability:</string>
    <string name="headPressure">Head Pressure:</string>
    <string name="explanation">Disability Scale: (Shepard et al., 1990)\n\n0: No disability; negligible symptoms\n1: No disability; bothersome symptoms\n2: Mild disability; performs usual work/duties, but symptoms interfere with outside activities\n3: Moderate disability; symptoms disrupt performance of both usual work and outside activities\n4: Recent severe disability; on medical leave or hard to change job because of symptoms\n5: Estabilished severe disability; unable to work for over 1 year or estabilished permanent disability with compensations payments)</string>
    <string name="selectionErrorTitle">Selection error</string>
    <string name="selectionErrorMessagePassDay">Your should select today or yesterday to add a new event.</string>
    <string name="newEventErrorTitle">New event error</string>
    <string name="newEventErrorMessageDayHasEvent">This day already has events. You only can add one event per day.</string>
    <string name="addEpisodeTitle">Add more episodes</string>
    <string name="addEpisodeContent">You have selected to add more episodes. Please enter the number of episodes for today. You must to summarize your symptoms in the other fields of this section</string>
    <string name="hearingLossSwitchTitle">More data is needed</string>
    <string name="hearingLossSwitchContent">You selected some auditive symptoms. Please specify where these auditive symptoms mainly occurred.</string>
    <string name="infoVisualTitle">Items info</string>
    <string name="infoVisualContent">Visual symptoms: Visual sensations that occur mainly before the attack.\n\nTumarkin: Sudden fall with no previous warning or provocative factor and without vertigo or loss of consciousness.</string>
    <string name="mandatoryFieldsContent">Data is not enought to add a new record, please set more data or press \'back\' button.</string>
    <string name="monthReportErrorTitle">Month report error</string>
    <string name="monthReportErrorContent">This month has no events</string>
    <string name="userEditText">E-mail</string>
    <string name="newUserEditText">New E-mail</string>
    <string name="passEditText">Password</string>
    <string name="newPassEditText">New password</string>
    <string name="currentPassEditText">Current password</string>
    <string name="confirmPassEditText">Confirm password</string>
    <string name="newConfirmPassEditText">Confirm new password</string>
    <string name="invalidEmail">Invalid E-mail.</string>
    <string name="differentConfirmPass">Confirm password is different.</string>
    <string name="invalidPass">Invalid password.</string>
    <string name="registerSuccess">Register successfully</string>
    <string name="emptyEmail">Enter E-mail</string>
    <string name="emptyPass">Enter password</string>
    <string name="singUpBtn">Sign up</string>
    <string name="loginUpBtn">Login</string>
    <string name="saveBtn">Save</string>
    <string name="rememberPassInfo">Remember password</string>
    <string name="editEmailPassInfo">Edit E-mail or password</string>
    <string name="registerInfo">Please sing up with a valid E-mail to allow us to send back your password in case you forget it.</string>
    <string name="loginInfo">To protect your personal data this section is password protected.</string>
    <string name="loginInfo2">Place your fingertip on the scanner to verify your identity or enter password below</string>
    <string name="loginInfo3">Enter password below.</string>
    <string name="rememberPassContent">We will send your password to \u0020</string>
    <string name="editUserDataInfo">Write current password below.</string>
    <string name="editUserInvalidCurrentPass">Write current password below.Current password is invalid.</string>
    <string name="editUserOkCurrentPass">Valid current password.</string>
    <string name="editUserAnyChange">Fill new E-mail or password</string>
    <string name="reditUserSuccess">Edit successfully</string>
    <string name="titleNewEntry">Nueva audición</string>
    <string name="oidoIzquierdo">Oído Izquierdo</string>
    <string name="oidoDerecho">Oído Derecho</string>
    <string name="frecuencia05">0.5kHz:</string>
    <string name="frecuencia1">1kHz:</string>
    <string name="frecuencia2">2kHz:</string>
    <string name="frecuencia4">4kHz:</string>
    <string name="frecMasMenos">±</string>
    <string name="enCrisis">En crisis</string>
    <string name="txtDetailChart">Detail Chart</string>
    <string name="txtTitleStatistics">This month Statistics</string>
    <string name="txtEventsInMonth">Events in</string>
    <string name="txtVertigoMigraineEvents">Vertigo/Migraine events:</string>
    <string name="txtDurationMean">Duration mean:</string>
    <string name="txtIntensityMean">Intensity mean:</string>
    <string name="txtActivityMean">Activity mean:</string>
    <string name="txtStressMean">Stress mean:</string>
    <string name="txtMainTriggerTitle">Main triggers:</string>
    <string name="txtChartLabelVertigo">Vertigo</string>
    <string name="txtChartLabelMigraine">Migraine</string>
    <string name="txtNewEvent">New Event</string>
    <string name="txtSeeSelection">View Selected</string>
    <string name="txtMonthReview">Month Report</string>
    <string name="txtFocusToday">Back Today</string>
    <string name="txtMonthEvents">Events this month:</string>
    <string name="txtUserGuide">User`s Guide</string>
    <string name="txtAuthors">Authors</string>
    <string name="txtFrameworks">Frameworks</string>
    <string name="txtVisitWeb">Visit Website</string>
    <string name="txtHearingDiary">Hearing Diary</string>
    <string name="txtHealthyHabits">Healthy Habits</string>
    <string name="txtDataImpExp">Manage Data</string>
    <string name="txtRateMe">Rate Me !</string>
    <string-array name="arrayQuestions">
        <item>WHAT IS MÉNIÈRE’S DISEASE?</item>
        <item>HOW COMMON IS IT?</item>
        <item>WHAT IS THE CAUSE OF MD?</item>
        <item>WHAT ARE THE SYMPTOMS OF MD?</item>
        <item>HOW IS A DIAGNOSIS MADE?</item>
        <item>HOW IS MD TREATED?</item>
        <item>HOW CAN I COPE WITH MD?</item>
        <item>MORE INFO ABOUT MD?</item>
    </string-array>
</resources>