<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.asmes.meniere.activity.MyMeniere.MonthReportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </com.github.mikephil.charting.charts.BarChart>




        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitleStatistics"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEventsInMonth"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtVertigoEvents"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="326dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDurationMean"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="363dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtIntensityMean"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="400dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtActivityMean"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="433dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStressMean"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="470dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMainTriggerTitle"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="510dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="547dp" />

</android.support.constraint.ConstraintLayout>
