<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="65dp"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvOidoIzq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/oidoIzquierdo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvOidoDer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/oidoDerecho" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tvFrec05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frecuencia05" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/etOidoIzq05_a"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/etOidoDer05_a"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvFrec1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frecuencia1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etOidoIzq1_a"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etOidoDer1_a"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvFrec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frecuencia2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etOidoIzq2_a"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etOidoDer2_a"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvFrec4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frecuencia4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etOidoIzq4_a"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etOidoDer4_a"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enCrisis" />

    </LinearLayout>
</LinearLayout>